modificacion en index y segundoindex

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <h1>Primera pagina </h1>
     Cualquier cosa xdxd
-    
+    modificar esto 1mero
 </head>
 <body>
     
